build/log/idf_py_stderr_output_55584
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c: In function 'oled_init':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:45:10: error: 'esp_lcd_panel_ssd1306_config_t' has no member named 'width'
   45 |         .width = OLED_WIDTH,
      |          ^~~~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:15:20: warning: excess elements in struct initializer
   15 | #define OLED_WIDTH 128
      |                    ^~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:45:18: note: in expansion of macro 'OLED_WIDTH'
   45 |         .width = OLED_WIDTH,
      |                  ^~~~~~~~~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:15:20: note: (near initialization for 'panel_config')
   15 | #define OLED_WIDTH 128
      |                    ^~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:45:18: note: in expansion of macro 'OLED_WIDTH'
   45 |         .width = OLED_WIDTH,
      |                  ^~~~~~~~~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:47:42: error: passing argument 2 of 'esp_lcd_new_panel_ssd1306' from incompatible pointer type [-Wincompatible-pointer-types]
   47 |     esp_lcd_new_panel_ssd1306(io_handle, &panel_config, &panel_handle);
      |                                          ^~~~~~~~~~~~~
      |                                          |
      |                                          esp_lcd_panel_ssd1306_config_t *
In file included from /Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:7:
/Users/elvisserem/esp/esp-idf/components/esp_lcd/include/esp_lcd_panel_ssd1306.h:57:107: note: expected 'const esp_lcd_panel_dev_config_t *' but argument is of type 'esp_lcd_panel_ssd1306_config_t *'
   57 | esp_err_t esp_lcd_new_panel_ssd1306(const esp_lcd_panel_io_handle_t io, const esp_lcd_panel_dev_config_t *panel_dev_config, esp_lcd_panel_handle_t *ret_panel);
      |                                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:50:5: error: implicit declaration of function 'esp_lcd_panel_reset'; did you mean 'esp_lcd_panel_io_del'? [-Wimplicit-function-declaration]
   50 |     esp_lcd_panel_reset(panel_handle);
      |     ^~~~~~~~~~~~~~~~~~~
      |     esp_lcd_panel_io_del
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:51:5: error: implicit declaration of function 'esp_lcd_panel_init'; did you mean 'esp_lcd_panel_io_del'? [-Wimplicit-function-declaration]
   51 |     esp_lcd_panel_init(panel_handle);
      |     ^~~~~~~~~~~~~~~~~~
      |     esp_lcd_panel_io_del
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:52:5: error: implicit declaration of function 'esp_lcd_panel_disp_on_off'; did you mean 'esp_lcd_panel_io_del'? [-Wimplicit-function-declaration]
   52 |     esp_lcd_panel_disp_on_off(panel_handle, true);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     esp_lcd_panel_io_del
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c: In function 'oled_clear':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/oled_display/oled_display.c:64:5: error: implicit declaration of function 'esp_lcd_panel_draw_bitmap' [-Wimplicit-function-declaration]
   64 |     esp_lcd_panel_draw_bitmap(panel_handle, 0, 0, OLED_WIDTH, OLED_HEIGHT, buffer);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/oled_display/CMakeFiles/__idf_oled_display.dir/oled_display.c.obj] Error 1
make[1]: *** [esp-idf/oled_display/CMakeFiles/__idf_oled_display.dir/all] Error 2
make: *** [all] Error 2
